tests/snapshots/examples_fixtures/type_system__failing__122_hash_missing_close_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/122_hash_missing_close_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `}` to close hash literal.

  examples/type_system/failing/122_hash_missing_close_brace.flx:2:1
  |
2 | let after = 3
  | ^^^

Hint:
  Hash literals use `{key: value, ...}` and must end with `}`.
== stdout ==
<not executed>
